--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "devconnector",
+  "name": "devvitality",
   "version": "1.0.0",
   "description": "A Social Network for Developers",
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Avi Le",
   "license": "MIT",
